[workspace]
members = [
    "plus_one",
    "two_sum",
    "reverse_int",
    "palindrome",
    "remove_element",
    "third_max_num",
    "daily_temperatures",
    "reverse_bits",
    "number_of_1_bits",
    "sort_colors",
    "first_unique_char",
    "sort_char_by_frequency",
    "sort_arr_by_incr_frequency",
    "ransome_note",
    "middle_of_linked_list",
    "max_consecutive_ones",
]
